# estoque-back

./: .gitignore  README.md  db.sqlite3  pyproject.toml
core/: settings.py  urls.py
products/: serializers.py  urls.py  views.py
products/management/commands/: seed_products.py
products/migrations/: 0001_initial.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_username_user_email.py
